--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 
 <head>
     <meta charset=utf-8/>
+    <title> ic-05</title>
+
 </head>
 
+<h1> Intro to JavaScript </h1>
+
+<button type="button" onCLick="ButtonClicked()
+">Click me!</button>
+
+<div id="button-div" class="gen">
+        Number of times button clicked: 0
+      </div>
 
 <body>
 
+<script src="main.js"></script>
 
 </body>
 
